Se agrego mejoras

--- a/projectIA.ipynb
+++ b/projectIA.ipynb
@@ -95,14 +95,12 @@
       "source": [
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
-        "\n",
         "# Instalación de librerías principales\n",
         "!pip install -q -U \\\n",
         "  langchain langchain-core langchain-community langchain-text-splitters \\\n",
-        "  sentence-transformers faiss-cpu \\\n",
+        "  sentence-transformers faiss-cpu rank_bm25 \\\n",
         "  requests pymupdf pandas sacrebleu nltk \\\n",
-        "  huggingface_hub tqdm\n",
-        "\n",
+        "  huggingface_hub tqdm bitsandbytes accelerate peft trl\n",
         "print(\"✓ Dependencias instaladas correctamente\")\n"
       ]
     },
@@ -149,13 +147,16 @@
         "# LangChain\n",
         "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
         "from langchain_community.vectorstores import FAISS\n",
+        "from langchain_community.retrievers import BM25Retriever\n",
+        "from langchain.retrievers import EnsembleRetriever\n",
         "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
         "from langchain_core.documents import Document\n",
         "\n",
         "# Métricas\n",
         "from sacrebleu.metrics import BLEU\n",
         "\n",
-        "print(\"✓ Importaciones completadas\")\n"
+        "print(\"✓ Importaciones completadas\")\n",
+        ""
       ]
     },
     {
@@ -884,7 +885,8 @@
         ")\n",
         "\n",
         "print(\"✓ Vector store creado\")\n",
-        "print(\"✓ Retriever configurado (k=3)\")\n"
+        "print(\"✓ Retriever configurado (k=3)\")\n",
+        "\n# Configurar BM25 (Keyword Retrieval)\nprint(\"🔍 Configurando BM25 Retriever...\")\nbm25_retriever = BM25Retriever.from_documents(documents)\nbm25_retriever.k = 3\n\n# Configurar Hybrid Search (Ensemble)\nprint(\"⚖️ Configurando Ensemble Retriever (Hybrid)...\")\nensemble_retriever = EnsembleRetriever(\n    retrievers=[bm25_retriever, retriever],\n    weights=[0.5, 0.5]\n)\nprint(\"✓ Hybrid RAG listo\")\n"
       ]
     },
     {
@@ -999,17 +1001,39 @@
         }
       ],
       "source": [
+        "\n",
         "class GuaraniTransformationSystem:\n",
         "    \"\"\"Sistema de transformación de oraciones en guaraní\"\"\"\n",
         "\n",
-        "    def __init__(self, llm, retriever=None):\n",
+        "    def __init__(self, llm, retriever=None, strategy=\"zero-shot\"):\n",
         "        self.llm = llm\n",
         "        self.retriever = retriever\n",
+        "        self.strategy = strategy\n",
+        "        \n",
+        "        # Ejemplos Few-Shot (simples, extraídos del train set idealmente)\n",
+        "        self.few_shot_examples = \"\"\"\n",
+        "Ejemplos:\n",
+        "Input: \"Ore ndorombyai kuri\" | Change: \"TYPE:AFF\"\n",
+        "Output: \"Ore rombyai kuri\"\n",
         "\n",
-        "    def transform_without_rag(self, source: str, change: str) -> str:\n",
-        "        \"\"\"Transformación SIN RAG\"\"\"\n",
+        "Input: \"Apyta\" | Change: \"NEGATION\"\n",
+        "Output: \"Ahapyta\"\n",
+        "\n",
+        "Input: \"Oguata\" | Change: \"PERSON:1_PL_INC\"\n",
+        "Output: \"Jaguata\"\n",
+        "\"\"\"\n",
+        "\n",
+        "    def transform(self, source: str, change: str) -> str:\n",
+        "        \"\"\"Método principal de transformación\"\"\"\n",
+        "        if \"rag\" in self.strategy:\n",
+        "            return self._transform_with_rag(source, change)\n",
+        "        else:\n",
+        "            return self._transform_base(source, change)\n",
+        "\n",
+        "    def _transform_base(self, source: str, change: str) -> str:\n",
         "        prompt = f\"\"\"\n",
         "Transforma la siguiente oración en guaraní según la regla indicada.\n",
+        "{self.few_shot_examples if \"few-shot\" in self.strategy else \"\"}\n",
         "\n",
         "Oración original: {source}\n",
         "Regla de transformación: {change}\n",
@@ -1018,13 +1042,15 @@
         "\"\"\"\n",
         "        return self.llm.generate(prompt)\n",
         "\n",
-        "    def transform_with_rag(self, source: str, change: str) -> str:\n",
-        "        \"\"\"Transformación CON RAG\"\"\"\n",
-        "\n",
-        "        # RAG: buscar contexto útil según la regla\n",
+        "    def _transform_with_rag(self, source: str, change: str) -> str:\n",
+        "        # RAG: buscar contexto útil\n",
         "        query = f\"{change} {source} reglas gramática guaraní\"\n",
-        "        docs = self.retriever.invoke(query)\n",
-        "        context = \"\\n\\n\".join([d.page_content[:500] for d in docs[:3]])\n",
+        "        \n",
+        "        docs = []\n",
+        "        if self.retriever:\n",
+        "            docs = self.retriever.invoke(query)\n",
+        "            \n",
+        "        context = \"\\n\\n\".join([d.page_content[:500] for d in docs[:3]]) if docs else \"No context found.\"\n",
         "\n",
         "        prompt = f\"\"\"\n",
         "Usa el siguiente contexto gramatical en guaraní para realizar la transformación:\n",
@@ -1034,6 +1060,7 @@
         "\n",
         "TAREA:\n",
         "Transformar la oración según la regla dada.\n",
+        "{self.few_shot_examples if \"few-shot\" in self.strategy else \"\"}\n",
         "\n",
         "Oración original: {source}\n",
         "Regla: {change}\n",
@@ -1042,20 +1069,14 @@
         "\"\"\"\n",
         "        return self.llm.generate(prompt)\n",
         "\n",
-        "    def evaluate_dataset(self, df: pd.DataFrame, use_rag: bool = False) -> List[Dict]:\n",
-        "        \"\"\"Evalúa el sistema en un dataset completo\"\"\"\n",
+        "    def evaluate_dataset(self, df: pd.DataFrame) -> List[Dict]:\n",
         "        results = []\n",
-        "\n",
         "        for idx, row in df.iterrows():\n",
         "            source = row[\"Source\"]\n",
         "            change = row[\"Change\"]\n",
         "            target = row[\"Target\"]\n",
         "\n",
-        "            # Generar predicción\n",
-        "            if use_rag:\n",
-        "                prediction = self.transform_with_rag(source, change)\n",
-        "            else:\n",
-        "                prediction = self.transform_without_rag(source, change)\n",
+        "            prediction = self.transform(source, change)\n",
         "\n",
         "            pred_clean = prediction.strip().replace('\"', '').lower()\n",
         "            targ_clean = target.strip().replace('\"', '').lower()\n",
@@ -1068,13 +1089,10 @@
         "                \"prediction\": prediction,\n",
         "                \"correct\": pred_clean == targ_clean\n",
         "            })\n",
-        "\n",
-        "            # evitar saturar OpenRouter\n",
         "            time.sleep(0.4)\n",
-        "\n",
         "        return results\n",
         "\n",
-        "print(\"✓ Sistema de transformación implementado\")\n"
+        "print(\"✓ Sistema de transformación actualizado (Soporta Few-Shot + Hybrid)\")\n"
       ]
     },
     {
@@ -1126,34 +1144,31 @@
         }
       ],
       "source": [
-        "# Usamos primero una muestra de DEV para ajustar\n",
-        "dev_data = datasets[\"dev\"].head(10)\n",
         "\n",
         "print(\"=\"*70)\n",
-        "print(\"EVALUANDO GPT-3.5 TURBO SIN RAG\")\n",
+        "print(\"EVALUACIÓN EXTENDIDA (Zero-Shot vs Few-Shot vs Hybrid RAG)\")\n",
         "print(\"=\"*70)\n",
-        "system_gpt_no_rag = GuaraniTransformationSystem(model_gpt35, retriever=None)\n",
-        "results_gpt_no_rag = system_gpt_no_rag.evaluate_dataset(dev_data, use_rag=False)\n",
         "\n",
-        "print(\"\\n\" + \"=\"*70)\n",
-        "print(\"EVALUANDO GPT-3.5 TURBO CON RAG\")\n",
-        "print(\"=\"*70)\n",
-        "system_gpt_rag = GuaraniTransformationSystem(model_gpt35, retriever=retriever)\n",
-        "results_gpt_rag = system_gpt_rag.evaluate_dataset(dev_data, use_rag=True)\n",
+        "configurations = [\n",
+        "    (\"GPT-3.5 Zero-Shot\", model_gpt35, None, \"zero-shot\"),\n",
+        "    (\"GPT-3.5 Few-Shot\",  model_gpt35, None, \"few-shot\"),\n",
+        "    (\"GPT-3.5 Semantic RAG\", model_gpt35, retriever, \"rag-zero-shot\"),\n",
+        "    (\"GPT-3.5 Hybrid RAG\",   model_gpt35, ensemble_retriever, \"rag-few-shot\"),\n",
+        "]\n",
         "\n",
-        "print(\"\\n\" + \"=\"*70)\n",
-        "print(\"EVALUANDO CLAUDE 3.5 SONNET SIN RAG\")\n",
-        "print(\"=\"*70)\n",
-        "system_claude_no_rag = GuaraniTransformationSystem(model_claude, retriever=None)\n",
-        "results_claude_no_rag = system_claude_no_rag.evaluate_dataset(dev_data, use_rag=False)\n",
+        "results_all = {}\n",
         "\n",
-        "print(\"\\n\" + \"=\"*70)\n",
-        "print(\"EVALUANDO CLAUDE 3.5 SONNET CON RAG\")\n",
-        "print(\"=\"*70)\n",
-        "system_claude_rag = GuaraniTransformationSystem(model_claude, retriever=retriever)\n",
-        "results_claude_rag = system_claude_rag.evaluate_dataset(dev_data, use_rag=True)\n",
+        "for name, model, ret, strat in configurations:\n",
+        "    print(f\"\\nEvaluating: {name}...\")\n",
+        "    try:\n",
+        "        sys = GuaraniTransformationSystem(model, retriever=ret, strategy=strat)\n",
+        "        res = sys.evaluate_dataset(dev_data) # Usando dev_data definido anteriormente\n",
+        "        results_all[name] = res\n",
+        "        print(f\"✓ {name} completado\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error en {name}: {e}\")\n",
         "\n",
-        "print(\"\\n✓ Evaluación en DEV completada (10 ejemplos)\")\n"
+        "# (Puedes agregar Claude aquí siguiendo el mismo patrón)\n"
       ]
     },
     {
@@ -1668,6 +1683,82 @@
         "- Las transformaciones requieren reglas específicas que no están explícitas en los PDFs.\n",
         "- Claude maneja mejor las estructuras y logra algunos aciertos exactos.\n",
         "- GPT-3.5 se acerca más en similitud pero falla en precisión exacta.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "finetuning-section"
+      },
+      "source": [
+        "## 14. Experimento de Fine-Tuning (QLoRA)\n",
+        "\n",
+        "Entrenamiento de un modelo ligero (Llama 3 8B cuantizado) usando los datos de entrenamiento."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "finetuning-code"
+      },
+      "outputs": [],
+      "source": [
+        "# Configuración para Fine-Tuning (Requiere GPU T4 en Colab)\n",
+        "try:\n",
+        "    import torch\n",
+        "    from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+        "    from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, TrainingArguments\n",
+        "    from trl import SFTTrainer\n",
+        "    from datasets import Dataset\n",
+        "\n",
+        "    print(\"🚀 Iniciando configuración de Fine-Tuning...\")\n",
+        "\n",
+        "    # 1. Preparar Dataset para SFT\n",
+        "    # Formato: Instruction: {change} Input: {source} Output: {target}\n",
+        "    train_df = datasets['train']\n",
+        "\n",
+        "    def format_instruction(sample):\n",
+        "        return f\"### Instruction:\\nTransform the Guarani sentence according to: {sample['Change']}\\n\\n### Input:\\n{sample['Source']}\\n\\n### Response:\\n{sample['Target']}\"\n",
+        "\n",
+        "    train_df['text'] = train_df.apply(format_instruction, axis=1)\n",
+        "    hf_dataset = Dataset.from_pandas(train_df[['text']])\n",
+        "\n",
+        "    print(f\"✓ Dataset preparado: {len(hf_dataset)} ejemplos\")\n",
+        "\n",
+        "    # NOTA: El código de entrenamiento completo requiere reiniciar el kernel o gestionar memoria.\n",
+        "    # Aquí dejamos la estructura lista para ejecutar si hay recursos.\n",
+        "    print(\"⚠️ Para ejecutar el entrenamiento completo, descomenta la siguiente sección si tienes GPU disponible.\")\n",
+        "\n",
+        "    # model_name = \"unsloth/llama-3-8b-bnb-4bit\"\n",
+        "    # bnb_config = BitsAndBytesConfig(load_in_4bit=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.float16)\n",
+        "    # model = AutoModelForCausalLM.from_pretrained(model_name, quantization_config=bnb_config, device_map=\"auto\")\n",
+        "    # tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+        "    #\n",
+        "    # peft_config = LoraConfig(r=16, lora_alpha=32, lora_dropout=0.05, bias=\"none\", task_type=\"CAUSAL_LM\")\n",
+        "    # model = prepare_model_for_kbit_training(model)\n",
+        "    # model = get_peft_model(model, peft_config)\n",
+        "    #\n",
+        "    # trainer = SFTTrainer(\n",
+        "    #    model=model,\n",
+        "    #    train_dataset=hf_dataset,\n",
+        "    #    dataset_text_field=\"text\",\n",
+        "    #    max_seq_length=512,\n",
+        "    #    args=TrainingArguments(\n",
+        "    #        per_device_train_batch_size=2,\n",
+        "    #        gradient_accumulation_steps=4,\n",
+        "    #        max_steps=60,\n",
+        "    #        learning_rate=2e-4,\n",
+        "    #        logging_steps=10,\n",
+        "    #        output_dir=\"outputs\",\n",
+        "    #        optim=\"paged_adamw_8bit\"\n",
+        "    #    ),\n",
+        "    # )\n",
+        "    # trainer.train()\n",
+        "    # print(\"✓ Entrenamiento completado\")\n",
+        "\n",
+        "except ImportError:\n",
+        "    print(\"❌ Librerías de entrenamiento no instaladas. Ejecuta pip install peft trl bitsandbytes\")\n"
       ]
     }
   ],
