Se exportaron los resultados

--- a/projectIA.ipynb
+++ b/projectIA.ipynb
@@ -955,10 +955,10 @@
       ],
       "metadata": {
         "id": "eZBc8fAGbuGj",
-        "outputId": "ac25d761-68ef-463f-f814-6f94acd48071",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ac25d761-68ef-463f-f814-6f94acd48071"
       },
       "id": "eZBc8fAGbuGj",
       "execution_count": 14,
@@ -2244,14 +2244,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 32,
       "id": "4d6cb53e",
       "metadata": {
         "id": "4d6cb53e",
-        "outputId": "39a16bae-0542-4ef3-c4d0-e92fbcdbddad",
+        "outputId": "4a48ff72-075d-4960-fb8d-b1d778e6d6d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 156
         }
       },
       "outputs": [
@@ -2261,7 +2261,11 @@
           "text": [
             "Guardando resultados...\n",
             "✓ Resultados guardados en: guarani_transformation_results.json\n",
-            "✓ Tabla comparativa guardada: comparison_table.csv\n"
+            "✓ Tabla comparativa guardada: comparison_table.csv\n",
+            "✓ Vector store FAISS guardado en carpeta: faiss_store\n",
+            "✓ Vector store comprimido en ZIP: faiss_store.zip\n",
+            "✓ Documentos del RAG guardados: rag_documents.json\n",
+            "✓ Metadata adicional guardada: rag_metadata.json\n"
           ]
         },
         {
@@ -2323,7 +2327,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_2dfb1852-19f6-4525-b86b-96a4491b10f2\", \"guarani_transformation_results.json\", 20628)"
+              "download(\"download_fcec863e-6483-45d3-ab55-27bb59fcc4a9\", \"guarani_transformation_results.json\", 20628)"
             ]
           },
           "metadata": {}
@@ -2387,7 +2391,199 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_c8bd27f7-aed0-451c-8224-5204db187fc9\", \"comparison_table.csv\", 380)"
+              "download(\"download_1da11dd0-831e-46ab-becd-d20f4b670cb6\", \"comparison_table.csv\", 380)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_ea02aef9-205b-4d9b-af95-30a1e210d790\", \"rag_documents.json\", 987447)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_efa851ce-8068-4f39-9d88-6341dc578915\", \"rag_metadata.json\", 177)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_1cbbe3fc-5694-4912-93e8-e847d3c7a642\", \"faiss_store.zip\", 457457)"
             ]
           },
           "metadata": {}
@@ -2403,7 +2599,9 @@
       "source": [
         "print(\"Guardando resultados...\")\n",
         "\n",
-        "# Reorganizar resultados en formato limpio\n",
+        "# ================================\n",
+        "# 1) REORGANIZAR RESULTADOS\n",
+        "# ================================\n",
         "all_results = {\n",
         "    \"results\": results_all,      # todas las ejecuciones\n",
         "    \"metrics\": metrics_table,    # métricas de accuracy y BLEU\n",
@@ -2428,21 +2626,83 @@
         "    }\n",
         "}\n",
         "\n",
-        "# Guardar JSON\n",
+        "# ================================\n",
+        "# 2) GUARDAR JSON DE RESULTADOS\n",
+        "# ================================\n",
         "with open(\"guarani_transformation_results.json\", \"w\", encoding=\"utf-8\") as f:\n",
         "    json.dump(all_results, f, ensure_ascii=False, indent=2)\n",
         "\n",
         "print(\"✓ Resultados guardados en: guarani_transformation_results.json\")\n",
         "\n",
-        "# Guardar tabla comparativa en CSV\n",
+        "\n",
+        "# ================================\n",
+        "# 3) EXPORTAR TABLA COMPARATIVA\n",
+        "# ================================\n",
         "comparison_df.to_csv(\"comparison_table.csv\", index=False)\n",
         "print(\"✓ Tabla comparativa guardada: comparison_table.csv\")\n",
         "\n",
-        "# Descarga automática para Colab\n",
+        "\n",
+        "# ================================\n",
+        "# 4) EXPORTAR VECTOR STORE (FAISS) + ZIP\n",
+        "# ================================\n",
+        "FAISS_DIR = \"faiss_store\"\n",
+        "\n",
+        "import os\n",
+        "os.makedirs(FAISS_DIR, exist_ok=True)\n",
+        "\n",
+        "# Guardado en carpeta\n",
+        "vectorstore.save_local(FAISS_DIR)\n",
+        "print(f\"✓ Vector store FAISS guardado en carpeta: {FAISS_DIR}\")\n",
+        "\n",
+        "# Comprimir carpeta a ZIP\n",
+        "zip_name = \"faiss_store.zip\"\n",
+        "!zip -r {zip_name} {FAISS_DIR} > /dev/null\n",
+        "\n",
+        "print(f\"✓ Vector store comprimido en ZIP: {zip_name}\")\n",
+        "\n",
+        "\n",
+        "# ================================\n",
+        "# 5) EXPORTAR DOCUMENTOS RAG\n",
+        "# ================================\n",
+        "docs_export = [d.page_content for d in documents]\n",
+        "\n",
+        "with open(\"rag_documents.json\", \"w\", encoding=\"utf-8\") as f:\n",
+        "    json.dump(docs_export, f, ensure_ascii=False, indent=2)\n",
+        "\n",
+        "print(\"✓ Documentos del RAG guardados: rag_documents.json\")\n",
+        "\n",
+        "\n",
+        "# ================================\n",
+        "# 6) EXPORTAR METADATA ADICIONAL\n",
+        "# ================================\n",
+        "metadata_extra = {\n",
+        "    \"faiss_zip\": zip_name,\n",
+        "    \"embedding_model\": \"E5-ONNX custom wrapper\",\n",
+        "    \"num_documents\": len(documents),\n",
+        "    \"chunks_info\": {\n",
+        "        \"min_length\": min(len(d.page_content) for d in documents),\n",
+        "        \"max_length\": max(len(d.page_content) for d in documents)\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "with open(\"rag_metadata.json\", \"w\", encoding=\"utf-8\") as f:\n",
+        "    json.dump(metadata_extra, f, ensure_ascii=False, indent=2)\n",
+        "\n",
+        "print(\"✓ Metadata adicional guardada: rag_metadata.json\")\n",
+        "\n",
+        "\n",
+        "# ================================\n",
+        "# 7) DESCARGA AUTOMÁTICA (COLAB)\n",
+        "# ================================\n",
         "try:\n",
         "    from google.colab import files\n",
+        "\n",
         "    files.download(\"guarani_transformation_results.json\")\n",
         "    files.download(\"comparison_table.csv\")\n",
+        "    files.download(\"rag_documents.json\")\n",
+        "    files.download(\"rag_metadata.json\")\n",
+        "    files.download(zip_name)  # <-- ZIP DEL VECTOR STORE\n",
+        "\n",
         "    print(\"✓ Descarga completada\")\n",
         "except Exception as e:\n",
         "    print(\"Descarga no disponible:\", e)\n"
